Bug 1285455 - Firebug theme - element-picker button is too tall in Animation Inspector. r=Honza

--- a/devtools/client/themes/firebug-theme.css
+++ b/devtools/client/themes/firebug-theme.css
@@ -244,3 +244,8 @@
 .theme-firebug .devtools-toolbarbutton {
   min-width: 24px;
 }
+
+
+.theme-firebug #element-picker {
+  min-height: 21px;
+}
